[gd_scene load_steps=3 format=3 uid="uid://bxkmog2pchtmw"]

[ext_resource type="Script" path="res://Scripts/Weapons/Thingy_Of_The_Thing/Thingy_Of_The_Thing.gd" id="1_doheo"]
[ext_resource type="Texture2D" uid="uid://d2usm5lv207pf" path="res://Sprites/Weapons/ThingyOfTheThing/ThingyOfTheThing.png" id="1_wmoq6"]

[node name="Thingy_Of_The_Thing" type="Sprite2D"]
texture = ExtResource("1_wmoq6")
script = ExtResource("1_doheo")
shoot_cooldown = 1.1
original_energy_use = 22.0
energy_recover_cooldown = 1.3

[node name="Recharge_Visual" type="Timer" parent="."]
one_shot = true

[node name="Frame_Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_wmoq6")

[connection signal="shoot" from="." to="." method="_on_shoot"]
[connection signal="timeout" from="Recharge_Visual" to="." method="_on_recharge_visual_timeout"]
